2006-07-10 Alejandro Serrano <trupill@yahoo.es>

	* Parser/SharpDevelopTree/Class.cs:
	* Parser/SharpDevelopTree/ReturnType.cs:
	* Parser/SharpDevelopTree/Method.cs: Updated to show generic parameters or arguments.
	* Parser/SharpDevelopTree/Local.cs: First approach to show local
	  variables on Completion Window.
	* Makefile.am: Add Parser/SharpDevelopTree/Local.cs to compilation.

2006-07-05 Matej Urbas <matej.urbas@gmail.com>

	* Parser/SharpDevelopTree/Class.cs: Updated to use ReturnType as BaseTypes.

2006-07-03 Lluis Sanchez Gual  <lluis@novell.com> 

	* NemerleLanguageBinding.cs:
	* NemerleBindingCompilerServices.cs: Track changes in ProjectReference.
	  Removed obsolete GenerateMakefile method.
	  
	* NemerleBinding.addin.xml: Updated versions.

2006-06-15 Lluis Sanchez Gual  <lluis@novell.com>

	* NemerleBinding.addin.xml: Use DataType instead of class to
	  declare serializable types.

2006-05-26 Alejandro Serrano <trupill@yahoo.es>

    * Total reestructuration of the Nemerle add-in to use the new Nemerle Completion Engine

2006-05-04 Lluis Sanchez Gual  <lluis@novell.com>

	* NemerleBinding.addin.xml: Updated versions.
	* NemerleBinding.mdp: Updated.

2006-04-21 Lluis Sanchez Gual <lluis@novell.com> 

	* NemerleLanguageBinding.cs: Implement GetSupportedClrVersions.

2006-04-07  David Makovský (Yakeen) <yakeen@sannyas-on.net>

	* NemerleBinding.addin.xml: renamed attribute in FileFilter Extension

2006-03-30 Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am:
	* NemerleBinding.addin.xml: Updated references.

2006-03-24 Lluis Sanchez Gual  <lluis@novell.com>   

	* NemerleBinding.mdp: Updated.
	* Makefile.am: Use an unified format. Patch by Matze Braun.
	* NemerleBinding.addin.xml: Updated add-in versions.

2006-03-12  David Makovský (Yakeen) <yakeen@sannyas-on.net>

        * Nemerle.glade: Marking some strings not to be translated. Not include balast in pot file.

2005-12-13  Lluis Sanchez Gual  <lluis@novell.com> 
